--- a/style.css
+++ b/style.css
@@ -2,12 +2,15 @@
     margin: auto;
     width: 300px;
     height: 300px;
-    border: solid black 1px;
+    border: solid black 2px;
     display: flex;
     flex-wrap: wrap;
 }
-
+body{
+    background-color: #0083ff36;
+}
 h1{
+    width: max-content;
     margin-left: auto;
     margin-right: auto ;
 }
