--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+
+*{
+    margin: 0;
+    padding: 0;
+}
 .grid{
     margin: auto;
     width: 300px;
@@ -7,12 +12,15 @@
     flex-wrap: wrap;
 }
 body{
-    background-color: #0083ff36;
+    background-color: #0083ff37;
 }
-h1{
+h1 ,p{
     width: max-content;
     margin-left: auto;
     margin-right: auto ;
+}
+p{
+    text-align: start;
 }
 .grid div{
     width: 20px;
